<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SelectionActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/purple_500"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/helloTxt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/hello"
        android:textColor="#616A68"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nameOfUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="180dp"
        android:gravity="center"
        android:text="@string/user"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/selectionTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:text="@string/selection_prompt"
        android:textColor="#616A68"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/venueButton"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="352dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/view_venues"
        android:textSize="15sp" />

    <Button
        android:id="@+id/upcomingEventsButton"
        android:layout_width="130dp"
        android:textSize="15sp"
        android:layout_height="100dp"
        android:layout_below="@id/selectionTxt"
        android:layout_alignTop="@+id/venueButton"
        android:layout_alignBottom="@+id/venueButton"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/venueButton"
        android:backgroundTint="@color/purple_500"
        android:text="@string/view_upcoming_events" />

    <Button
        android:id="@+id/joinedEventsButton"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_below="@id/selectionTxt"
        android:layout_alignTop="@+id/venueButton"
        android:layout_alignBottom="@+id/venueButton"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="-127dp"
        android:layout_marginTop="130dp"
        android:textSize="15sp"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="-130dp"
        android:layout_toEndOf="@+id/venueButton"
        android:backgroundTint="@color/purple_500"
        android:text="@string/view_joined_events" />

    <Button
        android:id="@+id/scheduledEventsButton"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/venueButton"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="53dp"
        android:textSize="15sp"
        android:layout_marginBottom="-129dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/view_scheduled_events" />

    <TextView
        android:id="@+id/LogOutTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="250dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/log_out"
        android:textColor="#E63852"
        android:textStyle="bold" />

</RelativeLayout>