<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/purple_500"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/signUpLbl"
        android:textColor="#616A68"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="name"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_short_text_24"
        android:drawablePadding="20dp"
        android:hint="@string/full_nameLbl"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="#8A918F"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="username"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="#8A918F" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:autofillHints="password"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="#8A918F" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/registerLbl"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/SignInPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/SignIntxt"
        android:layout_marginTop="85dp"
        android:gravity="center"
        android:text="@string/signInPrompt"
        android:textColor="#8A918F"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/SignIntxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="250dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/signInLbl"
        android:textColor="#058813"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>